// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`server capability snapshots > hackerspub > adapter 1`] = `"hackerspub"`;

exports[`server capability snapshots > hackerspub > capabilities 1`] = `
{
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "accounts.relationships": "unsupported:static:HackersPub account relationships are not mapped yet.",
  "auth.oauth.authorizationCode": "unsupported:probe:HackersPub does not use OAuth.",
  "auth.tokenInjection": "supported:static",
  "instance.nodeInfo": "supported:static",
  "media.upload": "unsupported:static:HackersPub media uploads are not mapped yet.",
  "polls.create": "unsupported:static:HackersPub poll creation is not mapped yet.",
  "polls.read": "unsupported:static:HackersPub poll reads are not mapped yet.",
  "polls.vote": "unsupported:static:HackersPub poll voting is not mapped yet.",
  "posts.create": "unsupported:static:HackersPub compose is not mapped yet.",
  "posts.delete": "unsupported:static:HackersPub post deletion is not mapped yet.",
  "posts.quote": "unsupported:static:HackersPub quote posts are not mapped yet.",
  "posts.read": "supported:static",
  "posts.reply": "unsupported:static:HackersPub replies are not mapped yet.",
  "search.accounts": "supported:static",
  "search.hashtags": "unsupported:static:HackersPub hashtag search is not mapped by this adapter yet.",
  "search.posts": "supported:static",
  "social.block": "unsupported:static:HackersPub social actions are not mapped yet.",
  "social.bookmark": "unsupported:static:HackersPub social actions are not mapped yet.",
  "social.boost": "unsupported:static:HackersPub social actions are not mapped yet.",
  "social.favourite": "unsupported:static:HackersPub social actions are not mapped yet.",
  "social.follow": "unsupported:static:HackersPub social actions are not mapped yet.",
  "social.mute": "unsupported:static:HackersPub social actions are not mapped yet.",
  "social.reaction": "unsupported:static:HackersPub social actions are not mapped yet.",
  "timelines.hashtag": "unsupported:static:HackersPub hashtag timelines are not mapped yet.",
  "timelines.local": "supported:static",
  "timelines.public": "supported:static",
}
`;

exports[`server capability snapshots > hollo > adapter 1`] = `"hollo"`;

exports[`server capability snapshots > hollo > capabilities 1`] = `
{
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "accounts.relationships": "unsupported:static:Hollo account relationship lookup is not mapped by this adapter yet.",
  "auth.oauth.authorizationCode": "supported:oauth",
  "auth.oauth.refreshToken": "unsupported:static:This adapter does not assume refresh-token support.",
  "auth.tokenInjection": "supported:static",
  "instance.nodeInfo": "supported:static",
  "media.upload": "supported:static",
  "polls.create": "unsupported:static:Hollo poll creation is not mapped because compose is not mapped yet.",
  "posts.create": "unsupported:static:Hollo compose is not mapped by this adapter yet.",
  "posts.delete": "unsupported:static:Hollo post deletion is not mapped by this adapter yet.",
  "posts.quote": "unsupported:static:This adapter does not expose a stable quote-post API.",
  "posts.read": "supported:static",
  "posts.reply": "unsupported:static:Hollo replies are not mapped because compose is not mapped yet.",
  "search.accounts": "supported:static",
  "search.hashtags": "unsupported:static:Hollo hashtag search is a stub in the upstream API.",
  "search.posts": "supported:static",
  "social.block": "supported:static",
  "social.bookmark": "unsupported:static:Hollo post social actions are not mapped by this adapter yet.",
  "social.boost": "unsupported:static:Hollo post social actions are not mapped by this adapter yet.",
  "social.favourite": "unsupported:static:Hollo post social actions are not mapped by this adapter yet.",
  "social.follow": "supported:static",
  "social.mute": "supported:static",
  "social.reaction": "unsupported:static:Mastodon-compatible base APIs do not assume emoji reaction support.",
  "timelines.hashtag": "unsupported:static:Hollo hashtag timelines are not mapped by this adapter yet.",
  "timelines.home": "supported:static",
  "timelines.local": "supported:static",
  "timelines.public": "supported:static",
}
`;

exports[`server capability snapshots > mastodon > adapter 1`] = `"mastodon"`;

exports[`server capability snapshots > mastodon > capabilities 1`] = `
{
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "accounts.relationships": "supported:static",
  "auth.oauth.authorizationCode": "supported:oauth",
  "auth.oauth.refreshToken": "unsupported:static:This adapter does not assume refresh-token support.",
  "auth.tokenInjection": "supported:static",
  "instance.nodeInfo": "supported:static",
  "media.upload": "supported:static",
  "polls.create": "supported:static",
  "posts.create": "supported:static",
  "posts.delete": "supported:static",
  "posts.quote": "unsupported:static:This adapter does not expose a stable quote-post API.",
  "posts.read": "supported:static",
  "posts.reply": "supported:static",
  "search.accounts": "supported:static",
  "search.hashtags": "supported:static",
  "search.posts": "unsupported:static:Mastodon status search depends on instance search indexing and is not assumed by this adapter.",
  "social.block": "supported:static",
  "social.bookmark": "supported:static",
  "social.boost": "supported:static",
  "social.favourite": "supported:static",
  "social.follow": "supported:static",
  "social.mute": "supported:static",
  "social.reaction": "unsupported:static:Mastodon-compatible base APIs do not assume emoji reaction support.",
  "streaming.timeline": "supported:instance",
  "timelines.hashtag": "supported:static",
  "timelines.home": "supported:static",
  "timelines.local": "supported:static",
  "timelines.public": "supported:static",
}
`;

exports[`server capability snapshots > misskey > adapter 1`] = `"misskey"`;

exports[`server capability snapshots > misskey > capabilities 1`] = `
{
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "accounts.relationships": "supported:static",
  "auth.oauth.authorizationCode": "supported:oauth",
  "auth.oauth.refreshToken": "unsupported:static:Misskey OAuth access tokens do not use refresh tokens.",
  "auth.tokenInjection": "supported:static",
  "instance.nodeInfo": "supported:static",
  "media.upload": "supported:static",
  "polls.create": "supported:static",
  "posts.create": "supported:static",
  "posts.delete": "supported:static",
  "posts.quote": "supported:static",
  "posts.read": "supported:static",
  "posts.reply": "supported:static",
  "search.accounts": "supported:static",
  "search.hashtags": "unsupported:static:Misskey hashtag search is not mapped by this adapter yet.",
  "search.posts": "supported:static",
  "social.block": "supported:static",
  "social.bookmark": "unsupported:static:Misskey bookmark and clip semantics are not mapped by this adapter yet.",
  "social.boost": "supported:static",
  "social.favourite": "supported:static",
  "social.follow": "supported:static",
  "social.mute": "supported:static",
  "social.reaction": "supported:probe",
  "timelines.hashtag": "supported:static",
  "timelines.home": "supported:static",
  "timelines.local": "supported:static",
  "timelines.public": "supported:static",
}
`;

exports[`server capability snapshots > pleroma > adapter 1`] = `"pleroma"`;

exports[`server capability snapshots > pleroma > capabilities 1`] = `
{
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "accounts.relationships": "supported:static",
  "auth.oauth.authorizationCode": "supported:static",
  "auth.oauth.refreshToken": "supported:static",
  "auth.tokenInjection": "supported:static",
  "instance.nodeInfo": "supported:static",
  "media.upload": "supported:static",
  "polls.create": "supported:static",
  "posts.create": "supported:static",
  "posts.delete": "supported:static",
  "posts.quote": "unsupported:static:This adapter does not expose a stable quote-post API.",
  "posts.read": "supported:static",
  "posts.reply": "supported:static",
  "search.accounts": "supported:static",
  "search.hashtags": "supported:static",
  "search.posts": "supported:static",
  "social.block": "supported:static",
  "social.bookmark": "supported:static",
  "social.boost": "supported:static",
  "social.favourite": "supported:static",
  "social.follow": "supported:static",
  "social.mute": "supported:static",
  "social.reaction": "supported:static",
  "timelines.hashtag": "supported:static",
  "timelines.home": "supported:static",
  "timelines.local": "supported:static",
  "timelines.public": "supported:static",
}
`;
